# wawi

./: Cargo.toml
src/: icons.rs  main.rs
src/appearance/: theme.rs
src/appereance/: style.rs  theme.rs
src/binding/: hadess.rs  logind.rs  mod.rs  upower.rs
src/bindings/: mod.rs
src/panel/: control_center.rs  mod.rs
src/panels/: control_center.rs
src/styling/: font.rs  format.rs  mod.rs  style.rs  theme.rs
src/widget/: hint.rs  icon.rs  mod.rs
src/widgets/: hint.rs  icon.rs
