[package]
name = "wawi"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["image", "svg", "tokio"] }
iced_layershell = "0.2.7"
tokio = { version = "1.39.2", features = ["rt", "macros", "fs"] }
udev = "0.9.0"
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
